<resources>
    <string name="app_name">Weather</string>
    <string name="mainfragment">MainFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_caption">Найти</string>
    <string name="moskwa_text">Москва</string>
    <string name="enter_address_hint">Начните вводить адрес тут</string>
    <string name="checkBoxOption1Text">NINJAS WEATHER</string>
    <string name="checkBoxOption2Text">OPEN WEATHER</string>
    <string name="checkBoxOption3Text">OPEN METEO</string>
    <string name="btnOKtext">OK</string>
    <string name="setting2TitleText">Выберите источники</string>
    <string name="none">_</string>
    <string name="temp1">adasdasd $s sdfsdfgdsfsdf $d $s</string>
    <string name="navigation_item_main">Главная</string>
    <string name="navigation_item_favourite">Избранное</string>
    <string name="navigation_item_profile">Профиль</string>

</resources>