<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".presentation.main.Settings2Fragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting2TitleText" />

    <CheckBox
        android:id="@+id/checkBoxOption1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxOption1Text" />

    <CheckBox
        android:id="@+id/checkBoxOption2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxOption2Text" />

    <CheckBox
        android:id="@+id/checkBoxOption3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxOption3Text" />

    <Button
        android:id="@+id/setting2_btnOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnOKtext" />
</LinearLayout>