<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.DadataFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <Button
        android:id="@+id/fragment_dadata_btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="80dp"
        android:gravity="fill"
        android:text="@string/search_caption" />

    <EditText
        android:id="@+id/DadataEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:ems="10"
        android:hint="@string/enter_address_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/moskwa_text" />

    <TextView
        android:id="@+id/dDataTextView"
        android:layout_width="96dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="TextView" />

</FrameLayout>